# biocraft-engine

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/biocraft-ai-surface/: Cargo.toml
crates/biocraft-ai-surface/examples/: ai_surface_demo.rs
crates/biocraft-ai-surface/src/: audit.rs  coklu.rs  context.rs  contract.rs  cost.rs  guard.rs  lib.rs  mock.rs  provider.rs  registry.rs
crates/biocraft-app/: Cargo.toml
crates/biocraft-app/src/: main.rs
crates/biocraft-app/src/observability/: crash.rs  mod.rs  tracing.rs
crates/biocraft-app/src/update/: mod.rs
crates/biocraft-data/: Cargo.toml
crates/biocraft-data/examples/: gizlilik_demo.rs  goc_demo.rs  gozlem_demo.rs  guncelleme_demo.rs  guncelleme_paketle.rs  guvenlik_demo.rs  proje_demo.rs
crates/biocraft-data/src/: lib.rs
crates/biocraft-data/src/migrate/: mod.rs  project.rs
crates/biocraft-data/src/privacy/: anonymize.rs  classify.rs  consent.rs  export.rs  lineage_browser.rs  mod.rs  profile.rs  provenance.rs
crates/biocraft-data/src/project/: export.rs  format.rs  integrity.rs  manifest.rs  mod.rs  provenance.rs
crates/biocraft-data/src/security/: credentials.rs  crypto.rs  integrity.rs  mod.rs  sanitize.rs  secure_delete.rs
crates/biocraft-data/src/update/: delta.rs  mod.rs  rollback.rs
crates/biocraft-data/tests/: edge_cases.rs
crates/biocraft-ipc/: Cargo.toml
crates/biocraft-ipc/src/: lib.rs
crates/biocraft-launcher/: Cargo.toml
crates/biocraft-launcher/src/: hardware_check.rs  launch.rs  lib.rs  news.rs  recent.rs  splash.rs  view.rs
crates/biocraft-mem/: Cargo.toml
crates/biocraft-mem/src/: akis.rs  autotune.rs  birim.rs  budget.rs  determinism.rs  disk_guard.rs  hardware_guard.rs  lib.rs  metrics.rs  orchestrator.rs  priority.rs  thermal.rs
crates/biocraft-net/: Cargo.toml
crates/biocraft-net/examples/: dagitik_kanca_demo.rs
crates/biocraft-net/src/: contract.rs  feed.rs  hooks.rs  identity.rs  iroh.rs  job.rs  katalog.rs  lib.rs  limits.rs
crates/biocraft-plugin-host/: Cargo.toml
crates/biocraft-plugin-host/examples/: eklenti_host_demo.rs  merhaba_demo.rs
crates/biocraft-plugin-host/ornek/: biocraft.toml  merhaba.wat
crates/biocraft-plugin-host/ornek-python/: biocraft.toml  eklenti.py
crates/biocraft-plugin-host/ornek/veri/: ornek.txt
crates/biocraft-plugin-host/src/: capability.rs  discover.rs  harden.rs  install.rs  isolate.rs  lib.rs  manifest.rs  safe_mode.rs  signature.rs  ui_ext.rs  vfs.rs
crates/biocraft-plugin-host/src/exec/: lsp.rs  mod.rs  ortam.rs  python.rs
crates/biocraft-plugin-host/src/runtime/: mod.rs  subprocess.rs  wasm.rs
crates/biocraft-render/: Cargo.toml
crates/biocraft-render/src/: frame_budget.rs  gpu.rs  lib.rs  lod.rs  olcu.rs  plot.rs  scene3d.rs  tdr.rs  tipografi.rs  tokens.rs
crates/biocraft-render/src/backend/: cpu.rs  cuda.rs  mod.rs  wgpu.rs
crates/biocraft-sdk/: Cargo.toml
crates/biocraft-sdk/src/: data.rs  eklenti.rs  lib.rs  node.rs  ui.rs
crates/biocraft-state/: Cargo.toml
crates/biocraft-state/src/: autosave.rs  command.rs  conflict.rs  durum_komutlari.rs  history.rs  lib.rs  recovery.rs  state.rs  store.rs  undo.rs
crates/biocraft-types/: Cargo.toml
crates/biocraft-types/benches/: cekirdek_bench.rs
crates/biocraft-types/src/: esikler.rs  golden.rs  job.rs  lib.rs  obslog.rs  trace.rs
crates/biocraft-types/tests/: golden_ornek.rs
crates/biocraft-types/tests/golden/: log_satiri.txt  varyant_ozeti.txt
crates/biocraft-ui/: Cargo.toml
crates/biocraft-ui/examples/: ai_panel_demo.rs  kod_kopru_demo.rs  komut_paleti_demo.rs  node_calistir_demo.rs  onboarding_demo.rs  pazar_demo.rs
crates/biocraft-ui/src/: i18n.rs  lib.rs  plot.rs  tipografi.rs  tokens.rs
crates/biocraft-ui/src/ai/: cost_badge.rs  mod.rs  panel.rs  tests.rs
crates/biocraft-ui/src/command/: fuzzy.rs  keymap_profile.rs  mod.rs  palette.rs  shortcuts.rs  tests.rs
crates/biocraft-ui/src/components/: butce_dialog.rs  confirm.rs  empty_state.rs  error_dialog.rs  estimate.rs  gallery.rs  mod.rs  progress.rs  skeleton.rs  status_badge.rs  toast.rs
crates/biocraft-ui/src/editor/: bridge.rs  history.rs  mod.rs  run.rs  syntax.rs  tests.rs  tree.rs
crates/biocraft-ui/src/market/: coklu_ai.rs  detail.rs  dogrulama.rs  mod.rs  reviews.rs  search.rs  tests.rs
crates/biocraft-ui/src/node/: cache.rs  canvas.rs  commands.rs  dag.rs  graph.rs  katalog.rs  kod.rs  mod.rs  port.rs  run.rs  serialize.rs  tests.rs
crates/biocraft-ui/src/onboarding/: help.rs  mod.rs  role.rs  templates.rs  tests.rs  tour.rs  tutorial.rs
crates/biocraft-ui/src/settings/: mod.rs  profiles.rs  search.rs  sections.rs  tests.rs
crates/biocraft-ui/src/shell/: activity_bar.rs  bottom_panel.rs  editor_area.rs  layout.rs  menu_bar.rs  mod.rs  side_panel.rs  split.rs  status_bar.rs  title_bar.rs
crates/biocraft-ui/src/wizard/: mod.rs  steps.rs  tests.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bcext_paket.rs  bcp1_zarf.rs  manifest_toml.rs  sifreli_zarf.rs
plugins/biocraft-core-studio/: Cargo.toml  biocraft.toml
plugins/biocraft-core-studio/benches/: cekirdek_eklenti_bench.rs
plugins/biocraft-core-studio/examples/: cilala_demo.rs  disa_aktarma_demo.rs  genom_tarayici_demo.rs  merhaba_studio.rs  varyant_demo.rs  veri_demo.rs  veritabani_demo.rs  yapi3d_demo.rs
plugins/biocraft-core-studio/src/: alignment.rs  annotation.rs  compute.rs  data_io.rs  db_search.rs  export.rs  genome_browser.rs  lib.rs  nodes.rs  perf.rs  sequence.rs  structure3d.rs  variant.rs
plugins/biocraft-core-studio/src/data_io/: alignment.rs  annotation.rs  bgzf.rs  bigwig.rs  budget.rs  detect.rs  fasta.rs  genbank.rs  index.rs  integrity.rs  mod.rs  provenance.rs  remote.rs  structure.rs  twobit.rs  variant.rs
plugins/biocraft-core-studio/src/db_search/: cache.rs  framework.rs  history.rs  (+6 more)
plugins/biocraft-core-studio/tests/: cilala.rs  disa_aktarma.rs  genom_tarayici.rs  genom_tarayici2.rs  varyant.rs  veri_io.rs  veri_io2.rs  veritabani.rs  veritabani2.rs  yapi3d.rs  yukleme.rs
(+100 files in other folders)
