# MK-40: Cargo workspace — bağımlılık yönü yalnızca L0→L5 (aşağıdan yukarı); döngüsel bağımlılık yasak.
[workspace]
resolver = "2"
members = [
    # L0 — temel tipler (hiçbir workspace crate'ine bağlı değil)
    "crates/biocraft-types",
    # L1 — SDK + IPC
    "crates/biocraft-sdk",
    "crates/biocraft-ipc",
    # L2 — veri / state / bellek
    "crates/biocraft-data",
    "crates/biocraft-state",
    "crates/biocraft-mem",
    # L3 — render / eklenti host / ağ / AI yüzey
    "crates/biocraft-render",
    "crates/biocraft-plugin-host",
    "crates/biocraft-net",
    "crates/biocraft-ai-surface",
    # L4 — UI kabuk + launcher
    "crates/biocraft-ui",
    "crates/biocraft-launcher",
    # L5 — ana binary
    "crates/biocraft-app",
]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["BioCraft Engine Developers"]
license   = "AGPL-3.0-or-later"

# Ortak dış bağımlılık sürümleri tek yerden sabitlenir (MK-01 render/UI yığını + yardımcılar).
# Böylece egui/wgpu/winit tüm crate'lerde TEK sürüme çözülür → tip uyumu garanti.
[workspace.dependencies]
# MK-01: Native UI yığını — winit + wgpu + egui (Tauri/Electron/Bevy YASAK).
egui       = "0.29"
egui-wgpu  = "0.29"
egui-winit = "0.29"
wgpu       = "22"
winit      = "0.30"
# Yardımcılar
pollster   = "0.3"
log        = "0.4"
env_logger = "0.11"
thiserror  = "1"
# MK-52: token (tokens.json) ayrıştırma. İP-04: 3B uniform/vertex POD bayt dönüşümü.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck   = { version = "1", features = ["derive"] }
# MK-09: out-of-core — büyük dosyaları bellek-eşlemeli (mmap) pencere pencere işleme.
memmap2    = "0.9"
