# MK-40: Cargo workspace — bağımlılık yönü yalnızca L0→L5 (aşağıdan yukarı); döngüsel bağımlılık yasak.
[workspace]
resolver = "2"
members = [
    # L0 — temel tipler (hiçbir workspace crate'ine bağlı değil)
    "crates/biocraft-types",
    # L1 — SDK + IPC
    "crates/biocraft-sdk",
    "crates/biocraft-ipc",
    # L2 — veri / state / bellek
    "crates/biocraft-data",
    "crates/biocraft-state",
    "crates/biocraft-mem",
    # L3 — render / eklenti host / ağ / AI yüzey
    "crates/biocraft-render",
    "crates/biocraft-plugin-host",
    "crates/biocraft-net",
    "crates/biocraft-ai-surface",
    # L4 — UI kabuk + launcher
    "crates/biocraft-ui",
    "crates/biocraft-launcher",
    # L5 — ana binary
    "crates/biocraft-app",
]
# MK-58 (İP-09): fuzzing hedefleri ayrı bir crate'tir ve workspace ÜYESİ DEĞİLDİR — yalnızca
# `cargo +nightly fuzz` (libfuzzer, nightly) ile derlenir.  Hariç tutulması, normal
# `cargo build/test --workspace` + clippy + machete + topoloji + cargo-deny akışını ETKİLEMEZ.
exclude = ["fuzz"]

[workspace.package]
version   = "0.1.0"
edition   = "2021"
authors   = ["BioCraft Engine Developers"]
license   = "AGPL-3.0-or-later"

# Ortak dış bağımlılık sürümleri tek yerden sabitlenir (MK-01 render/UI yığını + yardımcılar).
# Böylece egui/wgpu/winit tüm crate'lerde TEK sürüme çözülür → tip uyumu garanti.
[workspace.dependencies]
# MK-01: Native UI yığını — winit + wgpu + egui (Tauri/Electron/Bevy YASAK).
egui       = "0.29"
egui-wgpu  = "0.29"
egui-winit = "0.29"
wgpu       = "22"
winit      = "0.30"
# Yardımcılar
pollster   = "0.3"
log        = "0.4"
env_logger = "0.11"
thiserror  = "1"
# MK-52: token (tokens.json) ayrıştırma. İP-04: 3B uniform/vertex POD bayt dönüşümü.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck   = { version = "1", features = ["derive"] }
# MK-09: out-of-core — büyük dosyaları bellek-eşlemeli (mmap) pencere pencere işleme.
memmap2    = "0.9"
# MK-33/MK-38: durum/proje/güncelleme bütünlüğü (BLAKE3 checksum).  `pure` özelliği = taşınabilir
# saf-Rust uygulaması (C/asm derleyici gerektirmez → her makinede sorunsuz derlenir).
blake3     = { version = "1", features = ["pure"] }
# İP-11: yerel geçmiş/çakışma sürüm damgalarında zaman (UTC).  biocraft-types ile aynı sürüm.
chrono     = { version = "0.4", features = ["serde"] }
# MK-24/25/26: donanım izleme (CPU/RAM/sıcaklık) + disk boş alan + donanım profili.
# NVML (NVIDIA GPU) gerçek entegrasyonu insan-eli/sürücü işidir → MVP'de kanca (bkz. hardware_guard).
sysinfo    = { version = "0.33", default-features = false, features = ["system", "disk", "component"] }
# MK-12/MK-18 (İP-07): Tier-2 WASM eklenti sandbox'ı (bellek limiti + CPU fuel).
# KIRPILMIŞ özellik seti — bilinçli sadeleştirme:
#   • default-features = false → `cache` (zstd, C derleyici) ve `async` (tokio/fiber/psm asm)
#     çıkarıldı; böylece SAF Rust derlenir, C/asm derleyicisi GEREKMEZ + build hızlanır.
#   • cranelift = WASM→makine kodu derleyici; runtime = çalıştırma; wat = metin .wat yükleme;
#     std = standart kütüphane (no_std'a düşme); anyhow = `wasmtime::Error` (host fonksiyon hataları).
#     Yerel sinyal-tabanlı trap koruması (sandbox ihlali güvenli yakalanır) `runtime` ile gelir.
#   • Component Model bu sürümde KAPALI (çekirdek modül kullanıyoruz) → Gün 14+ köprülenir (MK-14).
wasmtime   = { version = "45.0.2", default-features = false, features = ["cranelift", "runtime", "wat", "std", "anyhow"] }
# İP-07: eklenti manifest'i (biocraft.toml) ayrıştırma — saf Rust, permissive lisans.
toml       = "1.1.2"
# MK-16 (İP-07): eklenti kriptografik imzası — Ed25519 (BSD-3-Clause, SAF Rust).
#   • default-features = false → getrandom/rand çıkar; anahtar `from_bytes` ile
#     deterministik kurulur, imzalama/doğrulama RFC 8032 gereği deterministiktir →
#     CI'da harici entropi/C derleyici GEREKMEZ.  `std` = std hata tipleri.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
# ─── İP-09 GÜVENLİK (MK-44/45/20) — hepsi SAF Rust (RustCrypto), C derleyici GEREKMEZ ───
# MK-44: hassas veriyi dinlenmede AES-256-GCM ile şifrele.  RustCrypto (Apache-2.0 OR MIT),
#   denetlenebilir açık kaynak (Kerckhoffs — İP-09 açık/kapalı ilkesi).
aes-gcm    = "0.10"
# MK-44: AES-GCM nonce'u her şifrelemede TAZE üretilir (asla tekrar etmez) — OS CSPRNG.
#   getrandom işletim sistemi syscall'ını kullanır (C derleyici/entropi sunucusu GEREKMEZ).
getrandom  = "0.2"
# MK-44/45: anahtar baytlarını bellekte kullanım sonrası SIFIRLA (zeroize) — RAM'de iz bırakma.
zeroize    = { version = "1", features = ["derive"] }
# MK-44: anahtarlar OS güvenli deposunda (Windows Credential Manager / macOS Keychain /
#   Linux kernel keyutils).  default-features=false + yalnız NATIVE backend'ler → Linux'ta
#   D-Bus/secret-service GEREKMEZ (CI'da derlenir).  Apache-2.0 OR MIT.
keyring    = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
