# İP-09 — Fuzzing hedefleri (cargo-fuzz / libfuzzer).
#
# Bu crate workspace ÜYESİ DEĞİLDİR (kök Cargo.toml `exclude`).  Yalnızca nightly + libfuzzer ile
# çalışır:  `cargo +nightly fuzz run manifest_toml`.  Normal CI (stable) bunu derlemez/çalıştırmaz;
# dosya-ayrıştırıcılarını periyodik fuzz testine sokmak için geliştirici/araç tarafından çalıştırılır.
# Kendi içinde bağımsız bir paket (kendi [workspace] tablosu) → kök workspace çözümlemesine karışmaz.
[package]
name = "biocraft-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
biocraft-data = { path = "../crates/biocraft-data" }
biocraft-plugin-host = { path = "../crates/biocraft-plugin-host" }

# cargo-fuzz, her hedefi ayrı bir [[bin]] olarak (libfuzzer harness) derler.
[[bin]]
name = "manifest_toml"
path = "fuzz_targets/manifest_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bcp1_zarf"
path = "fuzz_targets/bcp1_zarf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bcext_paket"
path = "fuzz_targets/bcext_paket.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sifreli_zarf"
path = "fuzz_targets/sifreli_zarf.rs"
test = false
doc = false
bench = false
