[package]
name        = "biocraft-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # iç workspace crate'i; crates.io'ya yayınlanmaz
description = "BioCraft Engine — L5: Ana binary; winit+wgpu+egui pencere host'u (MK-01, MK-03, MK-04, MK-40)"

[[bin]]
name = "biocraft"
path = "src/main.rs"

# MK-40: L5 — tüm alt katmanlara (L0..L4) bağlanabilir.
# İP-04: render motoru (biocraft-render) + UI galerisi (biocraft-ui) burada birleşir.
[dependencies]
biocraft-render = { path = "../biocraft-render" }
biocraft-ui     = { path = "../biocraft-ui" }
# İP-08: donanım koruma watchdog'u + auto-tune + disk koruması (L5→L2).
biocraft-mem    = { path = "../biocraft-mem" }
# İP-11: self-healing durum altyapısı — kalıcı durum + otomatik kayıt + çökme kurtarma (L5→L2).
biocraft-state  = { path = "../biocraft-state" }
# İP-02 (2. kısım): proje formatı — sihirbaz taslağı → gerçek klasör + manifest + BLAKE3 (L5→L2).
biocraft-data   = { path = "../biocraft-data" }
# İP-01: açılış istemcisi (launcher) — son projeler, haber akışı, donanım ön-kontrol (L5→L4).
biocraft-launcher = { path = "../biocraft-launcher" }
# İP-21: gözlemlenebilirlik — L0 yapılandırılmış log kaydı + iz bağlamı + PII süzgeci (L5→L0).
biocraft-types  = { path = "../biocraft-types" }
# ÇE-00 (MK-19): çekirdek eklenti BioCraft Studio motorla AYNI pakette gelir → geliştirmede
# "varsayılan kurulu" yan-yükleme.  Eklenti yalnızca biocraft-sdk'ya bağlıdır (MK-17); app onu
# (L5↔L5, aynı katman) sideload eder.  Paketleme (İP-20) bu eklentiyi kuruluma gömer.
biocraft-core-studio = { path = "../../plugins/biocraft-core-studio" }

# MK-01: pencere + egui↔wgpu köprüsü host katmanındadır (render egui'ye bağlı değil).
winit      = { workspace = true }
wgpu       = { workspace = true }
egui       = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu  = { workspace = true }
log        = { workspace = true }
# İP-21 (MK-57): yapılandırılmış log sink'i (NDJSON) + çökme raporu serileştirme + zaman damgası.
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }

[features]
# İP-04: CUDA iskeletini render üzerinden geçişli aç (varsayılan kapalı).
cuda = ["biocraft-render/cuda"]
