[package]
name        = "biocraft-data"
version.workspace = true
edition.workspace = true
description = "BioCraft Engine — L2: Veri katmanı (SQLite/DuckDB/RocksDB, proje formatı, provenance) (MK-31, MK-40)"

# MK-40: L2 — yalnızca L0/L1 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
biocraft-sdk   = { path = "../biocraft-sdk" }
