[package]
name        = "biocraft-data"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # iç workspace crate'i; crates.io'ya yayınlanmaz
description = "BioCraft Engine — L2: Veri katmanı (SQLite/DuckDB/RocksDB, proje formatı, provenance) (MK-31, MK-40)"

# MK-40: L2 — yalnızca L0/L1 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
biocraft-sdk   = { path = "../biocraft-sdk" }
# MK-31: proje manifesti (biocraft.toml) serileştirme/ayrıştırma — saf Rust, permissive lisans.
toml       = { workspace = true }
# Manifest/meta/provenance alanlarının serde türetmesi + provenance JSONL satır kaydı.
serde      = { workspace = true }
serde_json = { workspace = true }
# MK-33/MK-34: manifest + meta + her veri referansı için BLAKE3 bütünlük (açılışta doğrula).
blake3     = { workspace = true }
# Oluşturma/değiştirme tarihleri + göç geçmişi zaman damgaları (UTC).
chrono     = { workspace = true }
# ─── İP-09 GÜVENLİK (MK-44/45/20) ───────────────────────────────────────────────
# MK-44: hassas veriyi dinlenmede AES-256-GCM ile şifrele (security/crypto.rs).
aes-gcm    = { workspace = true }
# MK-44: her şifrelemede taze nonce (OS CSPRNG) — nonce ASLA tekrarlanmaz.
getrandom  = { workspace = true }
# MK-44/45: anahtar baytlarını kullanım sonrası bellekten sıfırla.
zeroize    = { workspace = true }
# MK-44: anahtarı OS güvenli deposunda sakla (security/credentials.rs).
keyring    = { workspace = true }
# MK-16 (İP-09 bütünlük): imzalı güncelleme paketini doğrula (security/integrity.rs) — Ed25519.
ed25519-dalek = { workspace = true }
