[package]
name        = "biocraft-plugin-host"
version.workspace = true
edition.workspace = true
description = "BioCraft Engine — L3: Wasmtime + capability + subprocess/konteyner yönetimi (MK-12, MK-13, MK-15, MK-40)"

# MK-40: L3 — yalnızca L0/L1/L2 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
biocraft-sdk   = { path = "../biocraft-sdk" }
biocraft-ipc   = { path = "../biocraft-ipc" }
biocraft-mem   = { path = "../biocraft-mem" }
