[package]
name        = "biocraft-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # iç workspace crate'i; crates.io'ya yayınlanmaz
description = "BioCraft Engine — L3: Wasmtime + capability + subprocess/konteyner yönetimi (MK-12, MK-13, MK-15, MK-40)"

# MK-40: L3 — yalnızca L0/L1/L2 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
biocraft-sdk   = { path = "../biocraft-sdk" }
biocraft-ipc   = { path = "../biocraft-ipc" }
biocraft-mem   = { path = "../biocraft-mem" }
# Dış bağımlılık sürümleri kökten (workspace.dependencies) sabitlenir — MK-60.
wasmtime  = { workspace = true }
toml      = { workspace = true }
serde     = { workspace = true }   # manifest şeması (Deserialize)
blake3    = { workspace = true }   # MK-33: AOT önbellek anahtarı + bütünlük
