[package]
name        = "biocraft-render"
version.workspace = true
edition.workspace = true
description = "BioCraft Engine — L3: wgpu/egui render altyapısı + tasarım token'ları (MK-01, MK-04, MK-52, MK-40)"

# MK-40: L3 — yalnızca L0/L1/L2 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
biocraft-sdk   = { path = "../biocraft-sdk" }
biocraft-mem   = { path = "../biocraft-mem" }
