[package]
name        = "biocraft-sdk"
version.workspace = true
edition.workspace = true
description = "BioCraft Engine — L1: Eklenti SDK'sı ve ortak yardımcılar (MK-17, MK-40)"

# MK-40: L1 — yalnızca L0 (biocraft-types) katmanına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types = { path = "../biocraft-types" }
