[package]
name        = "biocraft-types"
version.workspace = true
edition.workspace = true
description = "BioCraft Engine — L0 temel tipler (MK-40: hiçbir biocraft-* crate'ine bağlı değil)"

# MK-40: L0 — yalnızca harici crate'lere (serde/uuid/chrono) bağımlı; workspace crate'lerine sıfır bağımlılık.
[dependencies]
serde  = { version = "1",   features = ["derive"] }
uuid   = { version = "1",   features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
