[package]
name        = "biocraft-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # iç workspace crate'i; crates.io'ya yayınlanmaz
description = "BioCraft Engine — L4: Kabuk (6-bölge), menü, paneller, komut paleti, node/editör tuvali (MK-51, MK-40)"

# MK-40: L4 — yalnızca L0/L1/L2/L3 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types  = { path = "../biocraft-types" }
biocraft-sdk    = { path = "../biocraft-sdk" }
biocraft-render = { path = "../biocraft-render" }
biocraft-state  = { path = "../biocraft-state" }

# MK-01: UI = winit + wgpu + egui (Tauri/Electron/Bevy yasak).
# İP-16 bileşenleri saf egui ile yazılır; pencere/font yönetimi İP-04 (render host)
# tarafından sağlanır — bu yüzden burada yalnızca egui'ye bağlanırız.
egui = "0.29"
