[package]
name        = "biocraft-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # iç workspace crate'i; crates.io'ya yayınlanmaz
description = "BioCraft Engine — L4: Kabuk (6-bölge), menü, paneller, komut paleti, node/editör tuvali (MK-51, MK-40)"

# MK-40: L4 — yalnızca L0/L1/L2/L3 katmanlarına bağlı; üst katmanlara bağlantı yasak.
[dependencies]
biocraft-types  = { path = "../biocraft-types" }
biocraft-sdk    = { path = "../biocraft-sdk" }
biocraft-render = { path = "../biocraft-render" }
biocraft-state  = { path = "../biocraft-state" }
# İP-08: Bellek bütçesi diyaloğu + öncelik seçici + bellek göstergesi (L2 → aşağı bağımlılık).
biocraft-mem    = { path = "../biocraft-mem" }
# İP-06: kod editörü kodu AYRI SÜREÇTE çalıştırır (MK-02) → out-of-process çalıştırma motoru
# (`biocraft_plugin_host::exec`).  L4→L3 (render gibi); döngü yok (plugin-host UI'ye bağlanmaz).
biocraft-plugin-host = { path = "../biocraft-plugin-host" }
# İP-14 (YZ-00/01/06/08): AI yüzey sözleşmesi (provider/çıktı şeması/maliyet/çıkış kapısı).
# L4→L3 (render/plugin-host gibi); döngü yok (ai-surface UI'ye bağlanmaz, saf sözleşmedir).
# AI paneli/maliyet rozeti burada (L4) çizilir — token (MK-52) + i18n (MK-53) tek kaynağı UI'de.
biocraft-ai-surface = { path = "../biocraft-ai-surface" }
# İP-18: Bilim Pazarı **salt-okur içerik akışı** (mağaza/haber veri modeli + asenkron yükleyici).
# L4→L3 (ai-surface/render gibi); döngü yok (net UI'ye bağlanmaz).  Mağaza UI'si (egui) burada (L4)
# çizilir — token (MK-52) + i18n (MK-53) tek kaynağı UI'de; gerçek kurulum plugin-host ile.
biocraft-net = { path = "../biocraft-net" }

# MK-01: UI = winit + wgpu + egui (Tauri/Electron/Bevy yasak).
# İP-16 bileşenleri saf egui ile yazılır; pencere/font yönetimi İP-04 (render host)
# tarafından sağlanır — bu yüzden burada yalnızca egui'ye bağlanırız.
# Sürüm workspace'ten gelir → tüm crate'lerde tek egui sürümü (tip uyumu).
egui = { workspace = true }
# İP-05: `.bcflow` akış dosyası (JSON; sürüm + node id + bağlantı + parametre — git-diff alınabilir).
# serde/serde_json zaten workspace ağacında (data/state/sdk kullanıyor) → YENİ dış bağımlılık değil.
serde      = { workspace = true }
serde_json = { workspace = true }
# İP-06: büyük dosya akışı (out-of-core, MK-09) — devasa log RAM'e alınmadan bellek-eşlenir.
# memmap2 zaten workspace ağacında (biocraft-mem kullanıyor) → YENİ dış bağımlılık değil.
memmap2    = { workspace = true }
# İP-18: Bilim Pazarı asenkron yükleyici/çok-AI thread başlatma uyarısı (net feed ile aynı kalıp).
# log zaten workspace ağacında (launcher/app/net) → YENİ dış bağımlılık değil.
log        = { workspace = true }

[dev-dependencies]
# İP-18: market testlerinde Timestamp üretmek için (yalnızca test).  chrono zaten workspace ağacında.
chrono     = { workspace = true }
